--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,8 +21,10 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Restore dependencies
-      run: dotnet restore
-    - name: Build
-      run: dotnet build --no-restore
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: | 
+        pwd
+   #   run: dotnet restore
+   # - name: Build
+   #   run: dotnet build --no-restore
+   # - name: Test
+   #   run: dotnet test --no-build --verbosity normal
